objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Proposal_Target_Margin__c</fullName>
        <formula>Quote.WP_Target_Margin__c</formula>
        <label>Proposal Target Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warn_Status__c</fullName>
        <label>Warn Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Flagged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WP_Conversion_Factor__c</fullName>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WP_MarginPercent__c</fullName>
        <label>Margin % Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WP_Override_Conversion_Production_Rate__c</fullName>
        <label>Conversion Rate Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WP_Override_Unit_Cost__c</fullName>
        <label>Unit Cost Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WP_Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>